--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   pbp_django_auth: ^0.4.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
