--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   pbp_django_auth: ^0.4.0
   google_fonts: ^6.2.1
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
